--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,7 @@ jobs:
       NOXSESSION: ${{ matrix.session }}
       FORCE_COLOR: "1"
       PRE_COMMIT_COLOR: "always"
+      MONEYBIRD_API_KEY: ${{ secrets.MONEYBIRD_API_KEY }}
 
     steps:
       - name: Check out the repository
