--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ requestmodel = "^0.4.0"
 
 
 [tool.poetry.scripts]
-moneybird-api-python-client = "moneybird.__main__:main"
+moneybird = "moneybird.__main__:main"
 
 [tool.poetry.group.dev.dependencies]
 ruff = ">=0.1.3"
@@ -44,6 +44,7 @@ sphinx-click = ">=3.0.2"
 typeguard = ">=2.13.3"
 xdoctest = { extras = ["colors"], version = ">=0.15.10" }
 myst-parser = { version = ">=0.16.1" }
+datamodel-code-generator = "^0.22.1"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
